Fixing warnings